Web interface!
Mostly working, currently fixing websocket authentication stuff. Lots of small bits still missing.